deploy/k8s/web-app/service.yml
kind: Namespace
apiVersion: v1
metadata:
  name: web-app
---
# TODO consider changing service type to LoadBalancer to expose an endpoint
# TODO consider using static IP
kind: Service
apiVersion: v1
metadata:
  name: web-app-service
  namespace: web-app
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
