deploy/k8s/web-app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: web-app
  annotations:
    # NOTE: LB configuring lasts ~10-20min
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: web-app-test
    networking.gke.io/managed-certificates: web-app-certificate
spec:
  backend:
    serviceName: web-app-service
    servicePort: 80
